--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="page" lang="ru">
+<html lang="ru">
 
 <head>
   <meta charset="utf-8">
@@ -158,17 +158,17 @@
         <ul class="socials__list">
           <li class="socials-item">
             <a class="socials-item__link" href="#">
-              <img class="socials__vk" src="img/vk-icon.svg" alt="Иконка В контакте" />
+              <img class="socials-item__vk" src="img/vk-icon.svg" alt="Иконка В контакте" />
             </a>
           </li>
           <li class="socials-item">
             <a class="socials-item__link" href="#">
-              <img class="socials__fb" src="img/fb-icon.svg" alt="Иконка В контакте" />
+              <img class="socials-item__fb" src="img/fb-icon.svg" alt="Иконка В контакте" />
             </a>
           </li>
           <li class="socials-item">
             <a class="socials-item__link" href="#">
-              <img class="socials__inst" src="img/inst-icon.svg" alt="Иконка В контакте" />
+              <img class="socials-item__inst" src="img/inst-icon.svg" alt="Иконка В контакте" />
             </a>
           </li>
         </ul>
