--- a/catalog.html
+++ b/catalog.html
@@ -67,17 +67,17 @@
             <legend>Сетка:</legend>
             <ul class="grid__list" >
               <li class="grid-item">
-                <input class="grid-input__input visually-hidden" type="radio" name="grid-group" value="adaptive"
+                <input class="grid-item__input visually-hidden" type="radio" name="grid-group" value="adaptive"
                   id="filter-adaptive" checked />
                 <label for="filter-adaptive">Адаптивная</label>
               </li>
               <li class="grid-item">
-                <input class="grid-input__input visually-hidden" type="radio" name="grid-group" value="fixed"
+                <input class="grid-item__input visually-hidden" type="radio" name="grid-group" value="fixed"
                   id="filter-fixed" />
                 <label for="filter-fixed">Фиксированная</label>
               </li>
               <li class="grid-item">
-                <input class="grid-input__input visually-hidden" type="radio" name="grid-group" value="rubber"
+                <input class="grid-item__input visually-hidden" type="radio" name="grid-group" value="rubber"
                   id="filter-rubber" />
                 <label for="filter-rubber">Резиновая</label>
               </li>
