--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <a class="button button--red" href="blank.html">Узнать больше</a>
           </li>
           <li class="slider-item slider-item--gadget">
-            <p class="slider-item__slogan">Долго, дорого,<br />скрупулезно.</p>
+            <p class="slider-item__slogan">Только ночь,<br />только хардкор.</p>
             <p class="slider-item__text">Работать днем, как все? Мы против этого.<br>Ближе к полуночи работа только
               начинается.</p>
             <a class="button button--red" href="blank.html">Узнать больше</a>
@@ -179,29 +179,30 @@
         </div>
       </div>
     </section>
-    <section class="modal">
-      <p class="modal__tittle">Напишите нам</p>
-      <form class="modal__form" action="https://echo.htmlacademy.ru/" method="post">
-        <div class="form__data">
-          <p class="form__input">
-            <label for="name">Ваше имя:</label>
-            <input id="name" type="text" name="name" placeholder="Имя Фамилия" />
-          </p>
-          <p class="form__input">
-            <label for="email">Ваш email:</label>
-            <input id="email" type="email" name="email" placeholder="email@example.com" />
-          </p>
-          <p class="form__input item-letter">
-            <label for="text">Текст письма:</label>
-            <textarea id="text" name="letter" placeholder="В свободной форме"></textarea>
-          </p>
-        </div>
-        <button class="button button--modal button--red" type="submit" aria-label="Отправить">
-          Отправить
-        </button>
-      </form>
-      <button class="close__button" type="button" aria-label="Закрыть"></button>
-    </section>
   </footer>
+  <section class="modal">
+    <p class="modal__tittle">Напишите нам</p>
+    <form class="modal__form" action="https://echo.htmlacademy.ru/" method="post">
+      <div class="form__data">
+        <p class="form__input">
+          <label for="name">Ваше имя:</label>
+          <input id="name" type="text" name="name" placeholder="Имя Фамилия" />
+        </p>
+        <p class="form__input">
+          <label for="email">Ваш email:</label>
+          <input id="email" type="email" name="email" placeholder="email@example.com" />
+        </p>
+        <p class="form__input item-letter">
+          <label for="text">Текст письма:</label>
+          <textarea id="text" name="letter" placeholder="В свободной форме"></textarea>
+        </p>
+      </div>
+      <button class="button button--modal button--red" type="submit" aria-label="Отправить">
+        Отправить
+      </button>
+    </form>
+    <button class="close__button" type="button" aria-label="Закрыть"></button>
+  </section>
+  <script src="js/script.js"></script>
 </body>
 </html>
