--- a/catalog.html
+++ b/catalog.html
@@ -16,7 +16,7 @@
     <header class="header">
       <nav class="navigation">
         <a class="navigation__logo" href="index.html">
-          <img src="img/logo.svg" alt="logo" />
+          <img src="img/logo.svg" width="160" height="65" alt="logo" />
         </a>
         <ul class="navigation__menu">
           <li class="navigation__menu-item">
@@ -65,7 +65,7 @@
           </fieldset>
           <fieldset class="filters-grid">
             <legend>Сетка:</legend>
-            <ul class="grid__list" >
+            <ul class="grid__list">
               <li class="grid-item">
                 <input class="grid-item__input visually-hidden" type="radio" name="grid-group" value="adaptive"
                   id="filter-adaptive" checked />
@@ -148,7 +148,7 @@
               </div>
               <div>
                 <div class="catalog-item__img">
-                  <img src="img/img-sedona.jpg" alt="Sedona" />
+                  <img src="img/img-sedona.jpg" width="358" height="578" alt="Sedona" />
                 </div>
               </div>
               <div class="product-details">
@@ -162,12 +162,14 @@
                 <div class="points"></div>
               </div>
               <div class="catalog-item__img">
-                <img src="img/img-pink.jpg" alt="Pink" />
+                <img src="img/img-pink.jpg" width="358" height="578" alt="Pink" />
               </div>
               <div class="product-details">
                 <a class="product-details__buy" href="#">Pink app</a>
                 <p class="product-details__text">Продуктовый лендинг<br />приложения для iOS и Android</p>
-                <a class="button button--red" href="#">9 900 &#8381</a>
+                <button class="button button--red" href="#">
+                  9 900 <span>&#8381;</span>
+                </button>
               </div>
             </li>
             <li class="catalog-item">
@@ -175,12 +177,14 @@
                 <div class="points"></div>
               </div>
               <div class="catalog-item__img">
-                <img class="catalog-item__img" src="img/img-borodinsky.jpg" alt="Borodinsky" />
+                <img class="catalog-item__img" width="358" height="578" src="img/img-borodinsky.jpg" alt="Borodinsky" />
               </div>
               <div class="product-details">
                 <a class="product-details__buy" href="#">Barbershop</a>
                 <p class="product-details__text">Сайт салона красоты.<br />Для мужчин, да.</p>
-                <a class="button button--red" href="#">9 900 &#8381</a>
+                <button class="button button--red" href="#">
+                  9 900 <span>&#8381;</span>
+                </button>
               </div>
             </li>
             <li class="catalog-item">
@@ -188,12 +192,14 @@
                 <div class="points"></div>
               </div>
               <div class="catalog-item__img">
-                <img class="catalog-item__img" src="img/img-mishka.jpg" alt="Mishka" />
+                <img class="catalog-item__img" width="358" height="578" src="img/img-mishka.jpg" alt="Mishka" />
               </div>
               <div class="product-details">
                 <a class="product-details__buy" href="#">Mishka</a>
                 <p class="product-details__text">Интернет-магазин<br />вязанных игрушек.</p>
-                <a class="button button--red" href="#">9 900 &#8381</a>
+                <button class="button button--red" href="#">
+                  9 900 <span>&#8381;</span>
+                </button>
               </div>
             </li>
             <li class="catalog-item">
@@ -201,12 +207,14 @@
                 <div class="points"></div>
               </div>
               <div class="catalog-item__img">
-                <img class="catalog-item__img" src="img/img-aplus.jpg" alt="Aplus" />
+                <img class="catalog-item__img" width="358" height="578" src="img/img-aplus.jpg" alt="Aplus" />
               </div>
               <div class="product-details">
                 <a class="product-details__buy" href="#">A Plus</a>
                 <p class="product-details__text">Лендинг курсов повышения<br />квалификации</p>
-                <a class="button button--red" href="#">9 900 &#8381</a>
+                <button class="button button--red" href="#">
+                  9 900 <span>&#8381;</span>
+                </button>
               </div>
             </li>
             <li class="catalog-item">
@@ -214,12 +222,14 @@
                 <div class="points"></div>
               </div>
               <div class="catalog-item__img">
-                <img class="catalog-item__img" src="img/img-kvast.jpg" alt="Kvast" />
+                <img class="catalog-item__img" width="358" height="578" src="img/img-kvast.jpg" alt="Kvast" />
               </div>
               <div class="product-details">
                 <a class="product-details__buy" href="#">Кваст</a>
                 <p class="product-details__text">Промо-сайт производителя<br />крафтового кваса</p>
-                <a class="button button--red" href="#">9 900 &#8381</a>
+                <button class="button button--red" href="#">
+                  9 900 <span>&#8381;</span>
+                </button>
               </div>
             </li>
           </ul>
@@ -237,15 +247,15 @@
               <a class="pagination__page button" href="#">Следующая</a>
             </li>
           </ul>
+        </div>
       </section>
-    </div>
     </div>
   </main>
   <footer class="footer">
     <section class="map-and-contacts">
       <div class="map-and-contacts">
         <div class="map">
-          <img class="map__img" src="img/map.png" alt="map" />
+          <img class="map__img" width="100%" height="100%" src="img/map.png" alt="map" />
         </div>
         <div class="contacts">
           <p class="contacts__title">Nёrds Design Studio</p>
@@ -260,17 +270,17 @@
         <ul class="socials__list">
           <li class="socials-item">
             <a class="socials-item__link" href="#">
-              <img class="socials-item__vk" src="img/vk-icon.svg" alt="Иконка В контакте" />
+              <img class="socials-item__vk" src="img/vk-icon.svg" width="27" height="15" alt="vk icon" />
             </a>
           </li>
           <li class="socials-item">
             <a class="socials-item__link" href="#">
-              <img class="socials-item__fb" src="img/fb-icon.svg" alt="Иконка В контакте" />
+              <img class="socials-item__fb" src="img/fb-icon.svg" width="12" height="22" alt="facebook icon" />
             </a>
           </li>
           <li class="socials-item">
             <a class="socials-item__link" href="#">
-              <img class="socials-item__inst" src="img/inst-icon.svg" alt="Иконка В контакте" />
+              <img class="socials-item__inst" src="img/inst-icon.svg" width="21" height="21" alt="inst icon" />
             </a>
           </li>
         </ul>
