--- a/index.html
+++ b/index.html
@@ -17,23 +17,23 @@
     <header class="header">
       <nav class="navigation">
         <a class="navigation__logo">
-          <img src="img/logo.svg" alt="logo" />
+          <img src="img/logo.svg" width="160" height="65" alt="logo" />
         </a>
         <ul class="navigation__menu">
           <li class="navigation__menu-item">
-            <a href="blank.html">Студия</a>
+            <a href="#">Студия</a>
           </li>
           <li class="navigation__menu-item">
-            <a href="blank.html">Клиенты</a>
+            <a href="#">Клиенты</a>
           </li>
           <li class="navigation__menu-item">
             <a href="catalog.html">Магазин</a>
           </li>
           <li class="navigation__menu-item">
-            <a href="blank.html">Контакты</a>
+            <a href="#">Контакты</a>
           </li>
         </ul>
-        <a class="cart" href="blank.html">Корзина</a>
+        <a class="cart" href="#">Корзина</a>
       </nav>
     </header>
     <section class="slider">
@@ -43,19 +43,19 @@
             <p class="slider-item__slogan">Долго, дорого,<br />скрупулезно.</p>
             <p class="slider-item__text">Математически выверенный дизайн<br />для вашего сайта или мобильного
               приложения.</p>
-            <a class="button button--red" href="blank.html">Узнать больше</a>
+            <a class="button button--red" href="#">Узнать больше</a>
           </li>
           <li class="slider-item slider-item--computer">
             <p class="slider-item__slogan">Любим математику как никто другой.</p>
             <p class="slider-item__text">Никакого креатива, только математические формулы<br>для расчета идеальных
               пропорций.</p>
-            <a class="button button--red" href="blank.html">Узнать больше</a>
+            <a class="button button--red" href="#">Узнать больше</a>
           </li>
           <li class="slider-item slider-item--gadget">
             <p class="slider-item__slogan">Только ночь,<br />только хардкор.</p>
             <p class="slider-item__text">Работать днем, как все? Мы против этого.<br>Ближе к полуночи работа только
               начинается.</p>
-            <a class="button button--red" href="blank.html">Узнать больше</a>
+            <a class="button button--red" href="#">Узнать больше</a>
           </li>
         </ul>
         <div class="slider-paging">
@@ -68,22 +68,22 @@
     <section class="offers">
       <ul class="offers__list">
         <li class="offers-item">
-          <img class="offers-item__img" src="img/all-sites.png" alt="sites" />
+          <img class="offers-item__img" src="img/all-sites.png"  width="300" height="146" alt="sites" />
           <h3 class="offers-item__title">Веб-сайты</h3>
           <p class="offers-item__text">Мир никогда не будет прежним<br />после того как увидит ваш сайт!</p>
-          <a class="button button--red" href="blank.html">Заказать</a>
+          <a class="button button--red" href="#">Заказать</a>
         </li>
         <li class="offers-item">
-          <img class="offers-item__img" src="img/apps.png" alt="apps" />
+          <img class="offers-item__img" src="img/apps.png" width="300" height="146" alt="apps" />
           <h3 class="offers-item__title">Приложения</h3>
           <p class="offers-item__text">Покорите топ-10 приложений<br />в AppStore и Google Play</p>
-          <a class="button button--green" href="blank.html">Заказать</a>
+          <a class="button button--green" href="#">Заказать</a>
         </li>
         <li class="offers-item">
-          <img class="offers-item__img" src="img/presentations.png" alt="presentations" />
+          <img class="offers-item__img" src="img/presentations.png" width="300" height="146" alt="presentations" />
           <h3 class="offers-item__title">Презентации</h3>
           <p class="offers-item__text">Вы даже не подозреваете,<br />насколько вы изумительны!</p>
-          <a class="button button--yellow" href="blank.html">Заказать</a>
+          <a class="button button--yellow" href="#">Заказать</a>
         </li>
       </ul>
     </section>
@@ -144,7 +144,7 @@
     <section class="map-and-contacts">
       <div class="map-and-contacts">
         <div class="map">
-          <img class="map__img" src="img/map.png" alt="map" />
+          <img class="map__img" src="img/map.png" width="100%" height="100%" alt="map" />
         </div>
         <div class="contacts">
           <p class="contacts__title">Nёrds Design Studio</p>
@@ -159,17 +159,17 @@
         <ul class="socials__list">
           <li class="socials-item">
             <a class="socials-item__link" href="#">
-              <img class="socials-item__vk" src="img/vk-icon.svg" alt="Иконка В контакте" />
+              <img class="socials-item__vk" src="img/vk-icon.svg" width="27" height="15" alt="vk icon" />
             </a>
           </li>
           <li class="socials-item">
             <a class="socials-item__link" href="#">
-              <img class="socials-item__fb" src="img/fb-icon.svg" alt="Иконка В контакте" />
+              <img class="socials-item__fb" src="img/fb-icon.svg" width="12" height="22" alt="facebook icon" />
             </a>
           </li>
           <li class="socials-item">
             <a class="socials-item__link" href="#">
-              <img class="socials-item__inst" src="img/inst-icon.svg" alt="Иконка В контакте" />
+              <img class="socials-item__inst" src="img/inst-icon.svg" width="21" height="21" alt="inst icon" />
             </a>
           </li>
         </ul>
