--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
   <link rel="icon" href="img/favicon.svg" type="image/svg+xml" />
   <link rel="manifest" href="manifest.webmanifest" />
   <link rel="stylesheet" href="css/normalize.css" />
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/style.min.css" />
 </head>
 
 <body>
@@ -20,19 +20,19 @@
         </a>
         <ul class="navigation__menu">
           <li class="navigation__menu-item">
-            <a href="blank.html">Студия</a>
+            <a href="#">Студия</a>
           </li>
           <li class="navigation__menu-item">
-            <a href="blank.html">Клиенты</a>
+            <a href="#">Клиенты</a>
           </li>
           <li class="navigation__menu-item navigation__menu-item--current">
             <a href="catalog.html">Магазин</a>
           </li>
           <li class="navigation__menu-item">
-            <a href="blank.html">Контакты</a>
+            <a href="#">Контакты</a>
           </li>
         </ul>
-        <a class="cart" href="blank.html">Корзина</a>
+        <a class="cart" href="#">Корзина</a>
       </nav>
     </header>
     <div class="title">
@@ -252,16 +252,23 @@
     </div>
   </main>
   <footer class="footer">
-    <section class="map-and-contacts">
+    <section>
       <div class="map-and-contacts">
         <div class="map">
-          <img class="map__img" width="100%" height="100%" src="img/map.png" alt="map" />
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.603625300316!2d30.320858716173465!3d59.93871916905408!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1613493564716!5m2!1sru!2sru"
+            height="416" style="border: 0" allowfullscreen="" aria-hidden="false" tabindex="0"
+            title="Офис компании на ул. Большая Конюшенная 19/8, Санкт-Петербург"></iframe>
         </div>
-        <div class="contacts">
-          <p class="contacts__title">Nёrds Design Studio</p>
-          <p class="contacts__address">191186, Санкт-Петербург<br />ул. Б. Конюшенная, д. 19/8</p>
-          <p class="contacts__phone">тел. <a href="tel:+78122757575">+7 (812) 275-75-75</a></p>
-          <a class="button button--red" href="#">Напишите нам</a>
+        <div class="contacts__wrapper">
+          <div class="contacts">
+            <p class="contacts__title">Nёrds Design Studio</p>
+            <p class="contacts__address">191186, Санкт-Петербург<br />ул. Б. Конюшенная, д. 19/8</p>
+            <p class="contacts__phone">тел. 
+              <a class="phone-number" href="tel:+78122757575">+7 (812) 275-75-75</a>
+            </p>
+            <button class="button button--red" href="#">Напишите нам</button>
+          </div>
         </div>
       </div>
     </section>
@@ -291,6 +298,30 @@
       </div>
     </section>
   </footer>
+  <section class="modal">
+    <p class="modal__tittle">Напишите нам</p>
+    <form class="modal__form" action="https://echo.htmlacademy.ru/" method="post">
+      <div class="form__data">
+        <p class="form__input">
+          <label for="name">Ваше имя:</label>
+          <input id="name" type="text" name="name" placeholder="Имя Фамилия" />
+        </p>
+        <p class="form__input">
+          <label for="email">Ваш email:</label>
+          <input id="email" type="email" name="email" placeholder="email@example.com" />
+        </p>
+        <p class="form__input item-letter">
+          <label for="text">Текст письма:</label>
+          <textarea id="text" name="letter" placeholder="В свободной форме"></textarea>
+        </p>
+      </div>
+      <button class="button button--modal button--red" type="submit" aria-label="Отправить">
+        Отправить
+      </button>
+    </form>
+    <button class="close__button" type="button" aria-label="Закрыть"></button>
+  </section>
+  <script src="js/script.min.js"></script>
 </body>
 
 </html>
