--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="manifest" href="manifest.webmanifest" />
   <link rel="apple-touch-icon" href="img/favicon/180.png" />
   <link rel="stylesheet" href="css/normalize.css" />
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/style.min.css" />
 </head>
 
 <body>
@@ -68,7 +68,7 @@
     <section class="offers">
       <ul class="offers__list">
         <li class="offers-item">
-          <img class="offers-item__img" src="img/all-sites.png"  width="300" height="146" alt="sites" />
+          <img class="offers-item__img" src="img/all-sites.png" width="300" height="146" alt="sites" />
           <h3 class="offers-item__title">Веб-сайты</h3>
           <p class="offers-item__text">Мир никогда не будет прежним<br />после того как увидит ваш сайт!</p>
           <a class="button button--red" href="#">Заказать</a>
@@ -141,16 +141,23 @@
     </section>
   </main>
   <footer class="footer">
-    <section class="map-and-contacts">
+    <section>
       <div class="map-and-contacts">
         <div class="map">
-          <img class="map__img" src="img/map.png" width="100%" height="100%" alt="map" />
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.603625300316!2d30.320858716173465!3d59.93871916905408!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1613493564716!5m2!1sru!2sru"
+            height="416" style="border: 0" allowfullscreen="" aria-hidden="false" tabindex="0"
+            title="Офис компании на ул. Большая Конюшенная 19/8, Санкт-Петербург"></iframe>
         </div>
-        <div class="contacts">
-          <p class="contacts__title">Nёrds Design Studio</p>
-          <p class="contacts__address">191186, Санкт-Петербург<br />ул. Б. Конюшенная, д. 19/8</p>
-          <p class="contacts__phone">тел. <a href="tel:+78122757575">+7 (812) 275-75-75</a></p>
-          <a class="button button--red" href="#">Напишите нам</a>
+        <div class="contacts__wrapper">
+          <div class="contacts">
+            <p class="contacts__title">Nёrds Design Studio</p>
+            <p class="contacts__address">191186, Санкт-Петербург<br />ул. Б. Конюшенная, д. 19/8</p>
+            <p class="contacts__phone">тел. 
+              <a class="phone-number" href="tel:+78122757575">+7 (812) 275-75-75</a>
+            </p>
+            <button class="button button--red" href="#">Напишите нам</button>
+          </div>
         </div>
       </div>
     </section>
@@ -203,6 +210,7 @@
     </form>
     <button class="close__button" type="button" aria-label="Закрыть"></button>
   </section>
-  <script src="js/script.js"></script>
+  <script src="js/script.min.js"></script>
 </body>
+
 </html>
