--- a/catalog.html
+++ b/catalog.html
@@ -154,7 +154,9 @@
               <div class="product-details">
                 <a class="product-details__buy" href="#">Sedona</a>
                 <p class="product-details__text">Информационный сайт<br />для туристов</p>
-                <a class="button button--red" href="#">9 900 &#8381</a>
+                <button class="button button--red" type="button" aria-label="add sedona">
+                  9 900 <span>&#8381;</span>
+                </button>
               </div>
             </li>
             <li class="catalog-item">
@@ -167,7 +169,7 @@
               <div class="product-details">
                 <a class="product-details__buy" href="#">Pink app</a>
                 <p class="product-details__text">Продуктовый лендинг<br />приложения для iOS и Android</p>
-                <button class="button button--red" href="#">
+                <button class="button button--red" type="button" aria-label="add pink">
                   9 900 <span>&#8381;</span>
                 </button>
               </div>
@@ -182,7 +184,7 @@
               <div class="product-details">
                 <a class="product-details__buy" href="#">Barbershop</a>
                 <p class="product-details__text">Сайт салона красоты.<br />Для мужчин, да.</p>
-                <button class="button button--red" href="#">
+                <button class="button button--red" type="button" aria-label="add barbershop">
                   9 900 <span>&#8381;</span>
                 </button>
               </div>
@@ -197,7 +199,7 @@
               <div class="product-details">
                 <a class="product-details__buy" href="#">Mishka</a>
                 <p class="product-details__text">Интернет-магазин<br />вязанных игрушек.</p>
-                <button class="button button--red" href="#">
+                <button class="button button--red" type="button" aria-label="add mishka">
                   9 900 <span>&#8381;</span>
                 </button>
               </div>
@@ -212,7 +214,7 @@
               <div class="product-details">
                 <a class="product-details__buy" href="#">A Plus</a>
                 <p class="product-details__text">Лендинг курсов повышения<br />квалификации</p>
-                <button class="button button--red" href="#">
+                <button class="button button--red" type="button" aria-label="add A plus">
                   9 900 <span>&#8381;</span>
                 </button>
               </div>
@@ -227,7 +229,7 @@
               <div class="product-details">
                 <a class="product-details__buy" href="#">Кваст</a>
                 <p class="product-details__text">Промо-сайт производителя<br />крафтового кваса</p>
-                <button class="button button--red" href="#">
+                <button class="button button--red" type="button" aria-label="add kvast">
                   9 900 <span>&#8381;</span>
                 </button>
               </div>
@@ -267,7 +269,7 @@
             <p class="contacts__phone">тел. 
               <a class="phone-number" href="tel:+78122757575">+7 (812) 275-75-75</a>
             </p>
-            <button class="button button--red" href="#">Напишите нам</button>
+            <button class="button button--red" type="button" aria-label="write us">Напишите нам</button>
           </div>
         </div>
       </div>
