--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
             <p class="contacts__phone">тел. 
               <a class="phone-number" href="tel:+78122757575">+7 (812) 275-75-75</a>
             </p>
-            <button class="button button--red" href="#">Напишите нам</button>
+            <button class="button button--red" type="button" aria-label="write us">Напишите нам</button>
           </div>
         </div>
       </div>
